force-app/main/default/objects/New_Form_Creation__c/New_Form_Creation__c.object-meta.xml
<CustomObject>
    <label>New Form Creation</label>
    <nameField>
        <displayFormat>Form-{0}</displayFormat>
        <label>FormNo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>New Form creations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>