force-app/main/default/objects/New_Form_Creation__c/fields/Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <defaultValue>&apos;AAAAA@BBB.com&apos;</defaultValue>
    <label>Email ID</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>