force-app/main/default/objects/New_Form_Creation__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <defaultValue>&quot;George Reddy&quot;</defaultValue>
    <inlineHelpText>Please enter first name Bewakoof</inlineHelpText>
    <label>First Name</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>