force-app/main/default/objects/New_Form_Creation__c/fields/Languages_Known__c.field-meta.xml
<CustomField>
    <fullName>Languages_Known__c</fullName>
    <label>Languages Known</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>C++</fullName>
            </value>
            <value>
                <fullName>JAVA</fullName>
            </value>
            <value>
                <fullName>PYTHON</fullName>
            </value>
            <value>
                <fullName>OOPS</fullName>
            </value>
            <value>
                <fullName>DOT NET</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>J++</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>