force-app/main/default/objects/New_Form_Creation__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <defaultValue>&quot;GR&quot;</defaultValue>
    <label>Last Name</label>
    <length>15</length>
    <type>Text</type>
</CustomField>