force-app/main/default/objects/New_Form_Creation__c/fields/Preffered_Country__c.field-meta.xml
<CustomField>
    <fullName>Preffered_Country__c</fullName>
    <label>Preffered Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GERMANY</fullName>
            </value>
            <value>
                <fullName>INDIA</fullName>
            </value>
            <value>
                <fullName>NEW ZEALAND</fullName>
            </value>
            <value>
                <fullName>PAKISTAN</fullName>
            </value>
            <value>
                <fullName>SRILANKA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>