force-app/main/default/objects/New_Form_Creation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>