force-app/main/default/objects/New_Form_Creation__c/listViews/Detailed_info.listView-meta.xml
<ListView>
    <fullName>Detailed_info</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Detailed info</label>
</ListView>