force-app/main/default/objects/New_Form_Creation__c/listViews/Detailed_View.listView-meta.xml
<ListView>
    <fullName>Detailed_View</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Detailed View</label>
</ListView>